--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ admin.role.id=wetrsdfwetwfasfwdf
 normal.role.id=awgfasfwsdqtgasfwqgsdtg
 
 #social config
-googleClientId=690061659225-q95tmb60ckgm2cnfptop0s6b53e6pb09.apps.googleusercontent.com
+#googleClientId=690061659225-q95tmb60ckgm2cnfptop0s6b53e6pb09.apps.googleusercontent.com
 #googleSecret=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
 newPassword=awhsfiohbrwqchfwgfivwqguiprfwifyco
